[package]
name = "reqwasm"
version = "0.2.1"
authors = ["Hamza <muhammadhamza1311@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hamza1311/reqwasm"
description = "HTTP requests library for WASM Apps"
readme = "README.md"
keywords = ["requests", "http", "wasm", "websockets"]
categories = ["wasm", "web-programming::http-client", "api-bindings"]
exclude = [
    ".idea",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["json", "websocket"]

# Enables `.json()` on `Response`
json = ["wasm-bindgen/serde-serialize", "serde", "serde_json"]
# Enables the WebSocket API
websocket = [
    'web-sys/WebSocket',
    'web-sys/ErrorEvent',
    'web-sys/FileReader',
    'web-sys/MessageEvent',
    'web-sys/ProgressEvent',
    'web-sys/CloseEvent',
    'web-sys/BinaryType',
]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
thiserror = "1.0"
futures = "0.3.14"
gloo-utils = "0.1.0"

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

async-broadcast = "0.3"
pin-project = "1"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
    'RequestCache',
    'RequestCredentials',
    'ObserverCallback',
    'RequestRedirect',
    'ReferrerPolicy',
    'AbortSignal',
    'ReadableStream',
    'Blob',
    'FormData',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
