[package]
name = "reqwasm"
version = "0.5.0"
authors = ["Hamza <muhammadhamza1311@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hamza1311/reqwasm"
description = "HTTP requests library for WASM Apps"
readme = "README.md"
keywords = ["requests", "http", "wasm", "websockets"]
categories = ["wasm", "web-programming::http-client", "api-bindings"]
exclude = [
    ".idea",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
gloo-net = "0.1.0"

[features]
default = ["json", "websocket", "http"]

json = ["gloo-net/json"]
websocket = ["gloo-net/websocket"]
http = ["gloo-net/http"]
